experimental/heimdall/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      serviceAccountName: heimdall
      containers:
        - name: heimdall
          image: bonifaido/heimdall:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
