experimental/heimdall/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
  - port: 8080
