experimental/heimdall/deploy/istio.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    gateway-name: heimdall-gw
    gateway-type: ingress
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: istio://sds
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: heimdall
  namespace: heimdall
spec:
  gateways:
  - heimdall
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: heimdall.heimdall.svc.cluster.local
        port:
          number: 8080
